# g-suite-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python.yml
gst/: credentials.py  format_calendar_entries_jsonl.py  format_group_info.py  get_calendar_entries_jsonl.py  get_group_info.py  get_user_info.py  list_user_emails.py  uhtml.py  utils.py
